disable writing and display of the user if is not logged in

--- a/src/components/chat/chat.module.scss
+++ b/src/components/chat/chat.module.scss
@@ -10,8 +10,20 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-.form{
 
+#displayname{
+
+}
+
+//.form{
+//
+//}
+.username{
+  font-size: 1rem;
+}
+.userphoto{
+  width: 40%;
+  border-radius: 50%;
 }
 
 @keyframes App-logo-spin {
